{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 12,
  "lineage": "e3ad2fef-2156-a494-0655-e0de174eb1cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "vpc1_london_routetable",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0862a8031b9c618a4",
            "id": "rtb-0862a8031b9c618a4",
            "owner_id": "614055364343",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "VB-VPC-SIDECAR-RT-DEFAULT"
            },
            "vpc_id": "vpc-0a273431ee58ee0f8"
          },
          "dependencies": [
            "aws_vpc.vpc1_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc1_london_IGW",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00fc0b61b82a2d8d7",
            "owner_id": "614055364343",
            "tags": {
              "Name": "VB-VPC-SIDECAR-IGW"
            },
            "vpc_id": "vpc-0a273431ee58ee0f8"
          },
          "dependencies": [
            "aws_vpc.vpc1_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc1_london_IGW_route",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00fc0b61b82a2d8d7",
            "id": "r-rtb-0862a8031b9c618a41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0862a8031b9c618a4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.vpc1_london_IGW",
            "aws_vpc.vpc1_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc1_london_subnet_1_routetable",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0589a2c8635aec1df",
            "route_table_id": "rtb-0862a8031b9c618a4",
            "subnet_id": "subnet-04843209b03d4a489"
          },
          "dependencies": [
            "aws_subnet.vpc1_london_subnet_1",
            "aws_vpc.vpc1_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc1_london_subnet_2_routetable",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b3765945ecfc2f4",
            "route_table_id": "rtb-0862a8031b9c618a4",
            "subnet_id": "subnet-058da67d5cdc1e1d4"
          },
          "dependencies": [
            "aws_subnet.vpc1_london_subnet_2",
            "aws_vpc.vpc1_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc1_london_subnet_3_routetable",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03606394879b3446f",
            "route_table_id": "rtb-0862a8031b9c618a4",
            "subnet_id": "subnet-07584999dd0ecf942"
          },
          "dependencies": [
            "aws_subnet.vpc1_london_subnet_3",
            "aws_vpc.vpc1_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc1_london_remote_access",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:614055364343:security-group/sg-0cd04eb6475a1385d",
            "description": "Allow ping, rdp and ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd04eb6475a1385d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "VB-VPC-SIDECAR-SG-REMOTE-ACCESS",
            "name_prefix": null,
            "owner_id": "614055364343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VB-VPC-SIDECAR-SG-REMOTE-ACCESS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a273431ee58ee0f8"
          },
          "dependencies": [
            "aws_vpc.vpc1_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc1_london_subnet_1",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:614055364343:subnet/subnet-04843209b03d4a489",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.30.10.0/24",
            "id": "subnet-04843209b03d4a489",
            "map_public_ip_on_launch": true,
            "owner_id": "614055364343",
            "tags": {
              "Name": "VB-VPC-SIDECAR-SUBNET-1"
            },
            "vpc_id": "vpc-0a273431ee58ee0f8"
          },
          "dependencies": [
            "aws_vpc.vpc1_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc1_london_subnet_2",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:614055364343:subnet/subnet-058da67d5cdc1e1d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.30.20.0/24",
            "id": "subnet-058da67d5cdc1e1d4",
            "map_public_ip_on_launch": true,
            "owner_id": "614055364343",
            "tags": {
              "Name": "VB-VPC-SIDECAR-SUBNET-2"
            },
            "vpc_id": "vpc-0a273431ee58ee0f8"
          },
          "dependencies": [
            "aws_vpc.vpc1_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc1_london_subnet_3",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:614055364343:subnet/subnet-07584999dd0ecf942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.30.30.0/24",
            "id": "subnet-07584999dd0ecf942",
            "map_public_ip_on_launch": true,
            "owner_id": "614055364343",
            "tags": {
              "Name": "VB-VPC-SIDECAR-SUBNET-3"
            },
            "vpc_id": "vpc-0a273431ee58ee0f8"
          },
          "dependencies": [
            "aws_vpc.vpc1_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1_london",
      "provider": "provider.aws.london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:614055364343:vpc/vpc-0a273431ee58ee0f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-0cf4918f6548c0293",
            "default_route_table_id": "rtb-0862a8031b9c618a4",
            "default_security_group_id": "sg-01f9147257b9c4c64",
            "dhcp_options_id": "dopt-06a5cf6e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a273431ee58ee0f8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0862a8031b9c618a4",
            "owner_id": "614055364343",
            "tags": {
              "Name": "VB-VPC-SIDECAR"
            }
          }
        }
      ]
    }
  ]
}